automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,8 @@
     <title>Shopster</title>
   </head>
   <body>
-    
+    <form class="" action="index.html" method="post">
+      <p><input type="text" name="" value=""></p>
+    </form>
   </body>
 </html>
