--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
     <title>Shopster</title>
   </head>
   <body>
-    <form class="" action="index.html" method="post">
+    <form action="/checkout" method="post">
       <p><input type="text" name="" value=""></p>
     </form>
   </body>
