automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,8 @@
   </head>
   <body>
     <form action="/checkout" method="post">
-      <p><input type="text" name="" value=""></p>
+      <p>Item: <input type="text" name="item" value=""></p>
+      <p>Price: <input type="text" name="price" value=""></p>
     </form>
   </body>
 </html>
