automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,7 @@
     <form action="/checkout" method="post">
       <p>Item: <input type="text" name="item"></p>
       <p>Price: <input type="text" name="price"></p>
+      <input type="submit" name="submit" id="submit">
     </form>
   </body>
 </html>
