automatically backed up by learn

--- a/views/checkout.erb
+++ b/views/checkout.erb
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Cart</h1>
-    <h2> <%= @cart %> </h2>
+    <h2> <%= @session[:params][:item}] %> </h2>
   </body>
 </html>
